Added side content

--- a/index.html
+++ b/index.html
@@ -10,15 +10,39 @@
     <title>Digtal Resume</title>
 </head>
 <body>
+    <!-- <div class="avatar">
+        <img id="profile-pic" src="./assets/images/me.jpg" alt="self_image">
+        <h2 id="username">Noah <br />Rodriguez</h2>
+    </div> -->
+    <nav id="container--main">
+       <div class="left--side">
+            <section class="profile--summary">
+                <div class="avatar">
+                    <img id="profile-pic" src="./assets/images/me.jpg" alt="self_image">
+                    <h2>Noah Rodriguez<br /><span class="profile--title">Web Developer</span></h2>
+                </div>
+            </section>
 
-    <nav id="side-nav">
-        <div class="avatar">
-            <img id="profile-pic" src="./assets/images/me.jpg" alt="self_image">
-            <h2 id="username">Noah <br />Rodriguez</h2>
-        </div>
+            <section class="contact--info">
+                <h3 class="section--title">Contact Info</h3>
+                <div class="social--links">
+                    <ul>
+                        <li><a href="" target="_blank"><i class="fa fa-brands fa-phone"></i>+1 219 669 1791</a></li>
+                        <li><a href="" target="_blank"><i class="fa fa-solid fa-envelope"></i>noaherod18@gmail.com</a></li>
+                        <li><a href="" target="_blank"><i class="fa fa-brands fa-github"></i>Github</a></li>
+                        <li><a href="" target="_blank"><i class="fa fa-brands fa-linkedin"></i>Linkedin</a></li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="education">
+                <h3 class="section--title">Education</h3>
+            </section>
+       </div>
+       <div class="right--side"></div>
     </nav>
 
-    <div id="container--main">
+    <!-- <div id="container--main">
         <section id="wrapper--hero" class="section--page">
 
             <div>
@@ -33,7 +57,6 @@
             <div id="social--list">
                 <a href="" target="_blank"><i class="fa fa-brands fa-github"></i>Github</a>
                 <a href="" target="_blank"><i class="fa fa-brands fa-linkedin"></i>Linkedin</a>
-                <!-- design it to stand out -->
                 <a class="primary-btn" href="" target="_blank"><i class="fa fa-solid fa-download"></i>Download Resume</a>
             </div>
         </section>
@@ -71,7 +94,7 @@
                     <p class="subtext indent">This is a personal project that I am currently working using the League of Legends API. I wanted to create a personal dashboard where you can manage your champion pool and items. There will be a display for your champions giving relevant in game statistics. The project is being created in a MERN stack. This is a slow progress project.</p>
                 </div>
             </div>
-        </section>
+        </section> -->
     </div>
 </body>
 </html>
