Added media queries

--- a/index.html
+++ b/index.html
@@ -33,13 +33,11 @@
 
             <section class="education section--content">
                 <h3 class="section--title--left">Education</h3>
-                <ul>
-                    <li>
-                        <p>2015 - 2020</p>
-                        <h4>Bachelor of Science in Computer Information Technology</h4>
-                        <h4>Purdue University Northwest, Westville, IN</h4>
-                    </li>
-                </ul>
+                <div class="education--card">
+                    <p>2015 - 2020</p>
+                    <h4>Bachelor of Science in Computer Information Technology</h4>
+                    <h4>Purdue University Northwest, Westville, IN</h4>
+                </div>
             </section>
 
             <section class="downloads">
