Added more styling to media queries, Fixed avatar image, added link funcitonality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <div class="left--side">
             <section class="profile--summary">
                 <div class="avatar">
-                    <img class="profile-pic" src="./assets/images/me.jpg" alt="self_image">
+                    <img class="profile-pic" src="./assets/images/me.png" alt="self_image">
                     <h2>Noah Rodriguez<br /><span class="sub--title">Web Developer</span></h2>
                 </div>
             </section>
@@ -23,10 +23,10 @@
                 <h3 class="section--title--left">Contact Info</h3>
                 <div class="social--links">
                     <ul>
-                        <li><a href="" target="_blank"><i class="fa fa-brands fa-phone"></i>+1 219 669 1791</a></li>
-                        <li><a href="" target="_blank"><i class="fa fa-solid fa-envelope"></i>noaherod18@gmail.com</a></li>
-                        <li><a href="" target="_blank"><i class="fa fa-brands fa-github"></i>Github</a></li>
-                        <li><a href="" target="_blank"><i class="fa fa-brands fa-linkedin"></i>Linkedin</a></li>
+                        <li><i class="fa fa-brands fa-phone"></i>+1 219 669 1791</li>
+                        <li><a href="mailto:noaherod18@gmail.com"><i class="fa fa-solid fa-envelope"></i>noaherod18@gmail.com</a></li>
+                        <li><a href="https://github.com/NoahRod108" target="_blank"><i class="fa fa-brands fa-github"></i>Github</a></li>
+                        <li><a href="https://www.linkedin.com/in/noah-rodriguez-8121041aa" target="_blank"><i class="fa fa-brands fa-linkedin"></i>Linkedin</a></li>
                     </ul>
                 </div>
             </section>
@@ -51,7 +51,7 @@
        <div class="right--side">
         <section class="about section--content">
             <h2 class="section--title--right">Objective</h2>
-            <p>I am a programmer looking for a team to expand my knowledge and build upon my skills as a developer. I have the ability to learn new technologies as needed and collaborate in teams. I have been working in a LAMP stack on the front end and back end of out in-house web applications. Always eager to tackle new challenges and the technologies that come with them. I am currently learning React and sharpening my front-end design skills.</p>
+            <p>I am a programmer looking for a team to expand my knowledge and build upon my skills as a developer. I have the ability to learn new technologies as needed and collaborate in teams. I have been working in a LAMP stack on the front end and back end of our in-house web applications. Always eager to tackle new challenges and the technologies that come with them. I am currently learning React and sharpening my front-end design skills.</p>
         </section>
 
         <section class="experience section--content">
@@ -92,7 +92,7 @@
             <h3 class="section--title--right">Experience With:</h3>
             <div class="tech--items">
                 <div class="tech--cards">
-                    <span>Python, Express, NodeJS, Java</span>
+                    <span>Python, Express, NodeJS, Java, C#</span>
                 </div>
                 <div class="tech--cards">
                     <span> React, Laravel</span>
@@ -117,8 +117,8 @@
                 <div class="linebreak"></div>
 
                 <div class="project--items">
-                    <h3>League of Legends Manager - <span class="project--title">Personal project</span></h3>
-                    <p>This is a personal project that I am currently working using the League of Legends API. I wanted to create a personal dashboard where you can manage your champion pool and items. There will be a display for your champions giving relevant in game statistics. The project is being created in a MERN stack. This is a slow progress project.</p>
+                    <h3>Transportation App - <span class="project--title">Maintained / developed</span></h3>
+                    <p>The transportation app is a web / mobile application to track and request our on-campus buses. Using Google Maps JavaScript API, we mapped bus stops that students and staff frequently visit. Then, used the Cordova framework to wrap the HTML and JavaScript into a mobile application.</p>
                 </div>
                 <div class="linebreak"></div>
             </div>
