added download link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <section class="downloads">
                 <div class="buttons">
                     <div class="button">
-                        <a class="primary-btn" href="" target="_blank"><i class="fa fa-solid fa-download"></i>Download Resume</a>
+                        <a class="primary-btn" href="./assets/files/noah_rodriguez_resume.pdf" target="_blank"><i class="fa fa-solid fa-download"></i>Download Resume</a>
                     </div>
                 </div>
             </section>
