Changed project desc. to lists and reduced left side width

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
        <div class="right--side">
         <section class="about section--content">
             <h2 class="section--title--right">Objective</h2>
-            <p>I am a programmer looking for a team to expand my knowledge and build upon my skills as a developer. I have the ability to learn new technologies as needed and collaborate in teams. I have been working in a LAMP stack on the front end and back end of our in-house web applications. Always eager to tackle new challenges and the technologies that come with them. I am currently learning React and sharpening my front-end design skills.</p>
+            <p>Programmer looking for a team that provides rewarding challenges. A self-starter with the ability to learn new technologies quickly and collaborate in teams. Familiar with the front-end and back-end development. Always eager to tackle new technologies. Currently, learning React and sharpening my front-end design skills.</p>
         </section>
 
         <section class="experience section--content">
@@ -65,9 +65,8 @@
                     <h3>Solutions Engineer</h3>
                     <ul>
                         <li>Create and maintain in-house web / mobile applications for students and staff.</li>
-                        <li>Created documentation to help IT groups create their own email templates to be used for various departments</li>
                         <li>Collaborated with staff members to fix bugs and add new features to their applications.</li>
-                        <li>Updated legacy code to modern scalable code.</li>
+                        <li>Update legacy code to clean / semantic code.</li>
                     </ul>
                 </div>
             </div>
@@ -95,6 +94,12 @@
                     <span>Python, Express, NodeJS, Java, C#</span>
                 </div>
                 <div class="tech--cards">
+                    <span>APIs</span>
+                </div>
+                <div class="tech--cards">
+                    <span>Mobile Development</span>
+                </div>
+                <div class="tech--cards">
                     <span> React, Laravel</span>
                 </div>
             </div>
@@ -106,19 +111,26 @@
                 <div class="linebreak"></div>
                 <div class="project--items">
                     <h3>Student Roster - <span class="project--title">Lead</span></h3>
-                    <p>I was given lead to create a roster for staff members who manage student workers. created the application with React and the MUI library. On the back-end, I created a few internal API’s to retrieve student data using PHP and used MySQL as our database. To authorize staff members, we used Google SAML on login to verify their current role.</p>
+                    <li>Used React and MUI to create an interactive front-end user experience</li>
+                    <li>Created internal APIs for student data in PHP</li>
+                    <li>Google SAML for user authorization</li>
                 </div>
                 <div class="linebreak"></div>
 
                 <div class="project--items">
                     <h3>Leave System - <span class="project--title">Maintained / developed</span></h3>
-                    <p>I have maintained, fixed bugs, and added new features to our leave request system for staff and faculty. I have worked on the application from mid-way of development to production. The application was built in a LAMP stack with Google SAML as our user authorization.</p>
+                    <li>Maintained, fixed bugs, and added features from mid-development to deployment.</li>
+                    <li>Front-end developed from scratch with HTML, CSS, JavaScript, and jQuery</li>
+                    <li>Back-end developed with PHP and MySQL</li>
                 </div>
                 <div class="linebreak"></div>
 
                 <div class="project--items">
                     <h3>Transportation App - <span class="project--title">Maintained / developed</span></h3>
-                    <p>The transportation app is a web / mobile application to track and request our on-campus buses. Using Google Maps JavaScript API, we mapped bus stops that students and staff frequently visit. Then, used the Cordova framework to wrap the HTML and JavaScript into a mobile application.</p>
+                    <li>Developed with the Cordova framework</li>
+                    <li>Front-end developed from scratch with HTML, CSS, and JavaScript</li>
+                    <li>Back-end developed with PHP and MySQL</li>
+                    <li>Used Cordova to create IOS and Android applications</li>
                 </div>
                 <div class="linebreak"></div>
             </div>
