Reduced widhth of right side and added a few design changes and media query changes

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="projects--container">
                 <div class="linebreak"></div>
                 <div class="project--items">
-                    <h3>Student Roster - <span class="project--title">Lead</span></h3>
+                    <h3>Student Roster - <span class="project--title">Maintained / developed</span></h3>
                     <li>Used React and MUI to create an interactive front-end user experience</li>
                     <li>Created internal APIs for student data in PHP</li>
                     <li>Google SAML for user authorization</li>
